--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           name: install dependencies
           command: |
             sudo apt-get install python-pip
-            sudo pip install django flake8
+            sudo pip install -r requirements.txt
       - run:
           name: migrate
           command: |
@@ -20,6 +20,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            python manage.py collectstatic
             python manage.py test
             flake8 --exclude polls/migrations/,manage.py  .
 
